[gd_scene load_steps=39 format=2]

[ext_resource path="res://assests/NPCs/light_house keeper/walk/frame0002.png" type="Texture" id=1]
[ext_resource path="res://assests/NPCs/light_house keeper/idle/frame0002.png" type="Texture" id=2]
[ext_resource path="res://assests/NPCs/light_house keeper/idle/frame0003.png" type="Texture" id=3]
[ext_resource path="res://assests/NPCs/light_house keeper/idle/frame0004.png" type="Texture" id=4]
[ext_resource path="res://assests/NPCs/light_house keeper/idle/frame0005.png" type="Texture" id=5]
[ext_resource path="res://assests/NPCs/light_house keeper/idle/frame0006.png" type="Texture" id=6]
[ext_resource path="res://assests/NPCs/light_house keeper/idle/frame0007.png" type="Texture" id=7]
[ext_resource path="res://assests/NPCs/light_house keeper/idle/frame0008.png" type="Texture" id=8]
[ext_resource path="res://assests/NPCs/light_house keeper/idle/frame0009.png" type="Texture" id=9]
[ext_resource path="res://assests/NPCs/light_house keeper/idle/frame0010.png" type="Texture" id=10]
[ext_resource path="res://assests/NPCs/light_house keeper/idle/frame0011.png" type="Texture" id=11]
[ext_resource path="res://assests/NPCs/light_house keeper/walk/frame0003.png" type="Texture" id=12]
[ext_resource path="res://assests/NPCs/light_house keeper/walk/frame0004.png" type="Texture" id=13]
[ext_resource path="res://assests/NPCs/light_house keeper/walk/frame0005.png" type="Texture" id=14]
[ext_resource path="res://assests/NPCs/light_house keeper/walk/frame0006.png" type="Texture" id=15]
[ext_resource path="res://assests/NPCs/light_house keeper/LightHouse_Keeper.gd" type="Script" id=16]
[ext_resource path="res://assests/NPCs/light_house keeper/Lute_anim/lute0001.png" type="Texture" id=17]
[ext_resource path="res://assests/NPCs/light_house keeper/Lute_anim/lute0000.png" type="Texture" id=18]
[ext_resource path="res://assests/NPCs/light_house keeper/Lute_anim/lute0002.png" type="Texture" id=19]
[ext_resource path="res://assests/NPCs/light_house keeper/sitting_anim/sit0001.png" type="Texture" id=20]
[ext_resource path="res://assests/NPCs/light_house keeper/sitting_anim/sit0002.png" type="Texture" id=21]
[ext_resource path="res://assests/NPCs/light_house keeper/sitting_anim/sit0003.png" type="Texture" id=22]
[ext_resource path="res://assests/NPCs/light_house keeper/sitting_anim/sit0004.png" type="Texture" id=23]
[ext_resource path="res://assests/NPCs/light_house keeper/sitting_anim/sit0005.png" type="Texture" id=24]
[ext_resource path="res://assests/NPCs/light_house keeper/sitting_anim/sit0006.png" type="Texture" id=25]
[ext_resource path="res://assests/NPCs/light_house keeper/sitting_anim/sit0007.png" type="Texture" id=26]
[ext_resource path="res://assests/NPCs/light_house keeper/Lute.png" type="Texture" id=27]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "sitting",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 19 ) ],
"loop": true,
"name": "lute_play",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 5.1472
height = 17.0079

[sub_resource type="Animation" id=5]
length = 3.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.55, 0.85, 1.15, 1.45, 1.75, 2.05, 2.35, 2.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lute:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "lute_idle"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.55, 0.85, 1.15, 1.45, 1.75, 2.05, 2.35, 2.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lute:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_sitting"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "lute_play"
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "lute_play" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8, 1, 1.15, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 2, 1, 2, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lute:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "sitting"
length = 0.7
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "sitting" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lute:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.75, 11.25 ), Vector2( 6, 12.875 ), Vector2( 5.125, 13.625 ), Vector2( 3.625, 14.875 ), Vector2( 0.875, 16.125 ), Vector2( -2, 15 ), Vector2( -2, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lute:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ -28.6, -34.3, -17.2, -0.1, 17.0, -0.1, -0.1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Lute:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.66 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_lute_play"
} ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lute:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 26.1305, 13.661 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 2.69982, 2.2429 )

[node name="LightHouse_Keeper" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 12
script = ExtResource( 16 )

[node name="interaction" type="Label" parent="."]
visible = false
material = SubResource( 1 )
margin_left = 11.1984
margin_top = -11.7701
margin_right = 75.1984
margin_bottom = 2.22992
rect_scale = Vector2( 0.4, 0.4 )
text = "(E)interact"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="states" type="Label" parent="."]
material = SubResource( 2 )
margin_left = -13.0
margin_top = -14.0
margin_right = 57.0
rect_scale = Vector2( 0.4, 0.4 )
text = "................."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frames" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"
frame = 9

[node name="Lute" type="Sprite" parent="."]
visible = false
position = Vector2( 0.75, 11.25 )
rotation = -0.499164
texture = ExtResource( 27 )

[node name="main_collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.528063, 7.37533 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 5 )
anims/lute_idle = SubResource( 11 )
anims/lute_play = SubResource( 8 )
anims/sitting = SubResource( 9 )
anims/walk = SubResource( 6 )

[node name="timers" type="Node2D" parent="."]

[node name="state" type="Timer" parent="timers"]
one_shot = true

[node name="area2Ds" type="Node2D" parent="."]

[node name="Interaction" type="Area2D" parent="area2Ds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area2Ds/Interaction"]
modulate = Color( 0.952941, 0.0156863, 0.0156863, 1 )
self_modulate = Color( 0.964706, 0.0196078, 0.0196078, 1 )
position = Vector2( 1.12246, 7.1557 )
shape = SubResource( 7 )

[node name="sit_detect" type="Area2D" parent="area2Ds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area2Ds/sit_detect"]
position = Vector2( 1.14191, 19.1216 )
shape = SubResource( 10 )

[connection signal="timeout" from="timers/state" to="." method="_on_state_timeout"]
[connection signal="body_entered" from="area2Ds/Interaction" to="." method="_on_Interaction_body_entered"]
[connection signal="body_exited" from="area2Ds/Interaction" to="." method="_on_Interaction_body_exited"]
[connection signal="area_entered" from="area2Ds/sit_detect" to="." method="_on_sit_detect_area_entered"]
